; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nouveau_hw.c_nouveau_hw_get_clock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nouveau_hw.c_nouveau_hw_get_clock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.nouveau_pll_vals = type { i32 }

@PLL_MEMORY = common dso_local global i32 0, align 4
@CHIPSET_NFORCE = common dso_local global i32 0, align 4
@CHIPSET_NFORCE2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nouveau_hw_get_clock(%struct.drm_device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.drm_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.nouveau_pll_vals, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.drm_device* %0, %struct.drm_device** %4, align 8
  store i32 %1, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @PLL_MEMORY, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %29

13:                                               ; preds = %2
  %14 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %15 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = and i32 %16, 4080
  %18 = load i32, i32* @CHIPSET_NFORCE, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %29

20:                                               ; preds = %13
  %21 = call i32 @pci_get_bus_and_slot(i32 0, i32 3)
  %22 = call i32 @pci_read_config_dword(i32 %21, i32 108, i32* %8)
  %23 = load i32, i32* %8, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %26, label %25

25:                                               ; preds = %20
  store i32 4, i32* %8, align 4
  br label %26

26:                                               ; preds = %25, %20
  %27 = load i32, i32* %8, align 4
  %28 = sdiv i32 400000, %27
  store i32 %28, i32* %3, align 4
  br label %55

29:                                               ; preds = %13, %2
  %30 = load i32, i32* %5, align 4
  %31 = load i32, i32* @PLL_MEMORY, align 4
  %32 = icmp eq i32 %30, %31
  br i1 %32, label %33, label %44

33:                                               ; preds = %29
  %34 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %35 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = and i32 %36, 4080
  %38 = load i32, i32* @CHIPSET_NFORCE2, align 4
  %39 = icmp eq i32 %37, %38
  br i1 %39, label %40, label %44

40:                                               ; preds = %33
  %41 = call i32 @pci_get_bus_and_slot(i32 0, i32 5)
  %42 = call i32 @pci_read_config_dword(i32 %41, i32 76, i32* %9)
  %43 = load i32, i32* %9, align 4
  store i32 %43, i32* %3, align 4
  br label %55

44:                                               ; preds = %33, %29
  br label %45

45:                                               ; preds = %44
  %46 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %47 = load i32, i32* %5, align 4
  %48 = call i32 @nouveau_hw_get_pllvals(%struct.drm_device* %46, i32 %47, %struct.nouveau_pll_vals* %6)
  store i32 %48, i32* %7, align 4
  %49 = load i32, i32* %7, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %53

51:                                               ; preds = %45
  %52 = load i32, i32* %7, align 4
  store i32 %52, i32* %3, align 4
  br label %55

53:                                               ; preds = %45
  %54 = call i32 @nouveau_hw_pllvals_to_clk(%struct.nouveau_pll_vals* %6)
  store i32 %54, i32* %3, align 4
  br label %55

55:                                               ; preds = %53, %51, %40, %26
  %56 = load i32, i32* %3, align 4
  ret i32 %56
}

declare dso_local i32 @pci_read_config_dword(i32, i32, i32*) #1

declare dso_local i32 @pci_get_bus_and_slot(i32, i32) #1

declare dso_local i32 @nouveau_hw_get_pllvals(%struct.drm_device*, i32, %struct.nouveau_pll_vals*) #1

declare dso_local i32 @nouveau_hw_pllvals_to_clk(%struct.nouveau_pll_vals*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
